<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:background="@color/blue_button"
    android:dividerPadding="20dp"
    android:orientation="vertical"
    android:padding="50dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="What attribute(s) would you like to filter your items by?"
        android:paddingBottom="24dp"
        android:textAlignment="center"
        android:textSize="24sp">
    </TextView>

    <TextView
        android:id="@+id/filter_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Date Range:"
        android:textAlignment="center"
        android:textSize="18sp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_purple">

        <TextView
            android:id="@+id/filter_date_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Purchased between:"
            android:textSize="12sp"
            android:background="@color/light_purple"
            android:paddingVertical="10dp"
            android:layout_gravity="center"
            android:layout_weight="0.05">
        </TextView>

        <TextView
            android:id="@+id/filter_selected_dates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="12sp"
            android:background="@color/light_purple"
            android:paddingVertical="10dp"
            android:layout_gravity="center"
            android:layout_weight="0.5">
        </TextView>

        <Button
            android:id="@+id/filter_pick_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textSize="12sp"
            android:focusable="true"
            android:text="SET"
            android:layout_gravity="end|center_vertical"
            android:layout_weight="0.05">
        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/filter_desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Description:"
        android:textAlignment="center"
        android:textSize="18sp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_purple">

        <TextView
            android:id="@+id/filter_desc_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Has the words:"
            android:textSize="12sp"
            android:background="@color/light_purple"
            android:paddingVertical="10dp"
            android:layout_gravity="center"
            android:layout_weight="0.05">
        </TextView>

        <EditText
            android:id="@+id/filter_selected_keywords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="chair, apple, backyard"
            android:textSize="12sp"
            android:background="@color/light_purple"
            android:paddingVertical="10dp"
            android:layout_gravity="center"
            android:layout_weight="0.5">
        </EditText>

    </LinearLayout>

    <TextView
        android:id="@+id/filter_make_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Make:"
        android:textAlignment="center"
        android:textSize="18sp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_purple">

        <TextView
            android:id="@+id/filter_make_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Has the words:"
            android:textSize="12sp"
            android:background="@color/light_purple"
            android:paddingVertical="10dp"
            android:layout_gravity="center"
            android:layout_weight="0.05">
        </TextView>

        <EditText
            android:id="@+id/filter_selected_makes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Acme, Mom and Pop, NewCo"
            android:textSize="12sp"
            android:background="@color/light_purple"
            android:paddingVertical="10dp"
            android:layout_gravity="center"
            android:layout_weight="0.5">
        </EditText>

    </LinearLayout>

    <TextView
        android:id="@+id/filter_tags_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Tags:"
        android:textAlignment="center"
        android:textSize="18sp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_purple">

        <TextView
            android:id="@+id/filter_tags_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Has tags:"
            android:textSize="12sp"
            android:background="@color/light_purple"
            android:paddingVertical="10dp"
            android:layout_gravity="center"
            android:layout_weight="0.05">
        </TextView>

        <TextView
            android:id="@+id/filter_selected_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@color/light_purple"
            android:hint="kitchen, office, auto"
            android:paddingVertical="10dp"
            android:textSize="12sp"></TextView>
        <Button
            android:id="@+id/add_filter_tags_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10sp"
        android:layout_marginHorizontal="20dp">

        <Button
            android:id="@+id/filter_cancel"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CANCEL"

            android:backgroundTint="@color/light_red"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:focusable="true">
        </Button>

        <Button
            android:id="@+id/filter_ok"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CONFIRM"
            android:backgroundTint="@color/light_green"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:focusable="true">
        </Button>

    </LinearLayout>


</LinearLayout>