...
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        >


        <Button
            android:id="@+id/filter_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            android:outlineProvider="paddedBounds"
...
            android:textSize="20sp">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_type_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

<!--        <TextView-->
<!--            android:id="@+id/filter_type_textview"-->
...
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="20sp"
            android:layout_gravity="bottom"/>

        <Button
            android:id="@+id/add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:backgroundTint="@color/grey_button"
            android:clickable="true"
            android:focusable="true"
...
